# ckan_geoconnex_bulk_runner

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: container.yml  release.yml
bulk_loader/: Cargo.toml  Dockerfile
bulk_loader/src/: main.rs
ckan_geoconnex_bulk_runner/src/: jsonld.rs
ckan_geoconnex_bulk_runner/tests/: validate_jsonld.rs
ckan_geoconnex_bulk_runner_py/: Cargo.toml  pyproject.toml
ckan_geoconnex_bulk_runner_py/.github/workflows/: CI.yml
ckan_geoconnex_bulk_runner_py/src/: lib.rs
config/: example.toml
generate_release/: Cargo.toml
generate_release/src/: main.rs
geoconnex_utils/: Cargo.toml
geoconnex_utils/src/: jsonld.rs  lib.rs  schema.rs
geoconnex_utils/tests/: validate_jsonld.rs
src/: jsonld.rs  lib.rs  main.rs  utils.rs
tests/: validate_jsonld.rs
