[package]
name = "ckan_geoconnex_bulk_runner_py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "ckan_geoconnex_bulk_runner_py"

[dependencies]
ckan_geoconnex_bulk_runner = { path = "../ckan_geoconnex_bulk_runner" }
pyo3 = "0.28.3"
serde_json = "1.0.149"
